swagger completed for two models
