# server/swagger.yaml
@@ -10,7 +10,7 @@ servers:
     description: front-end
   
 paths:
-  /users/getAllUsers:
+  /users/getAllUsers/:
     get:
       summary: Returns a list of users.
       tags: [User]
@@ -21,6 +21,24 @@ paths:
             application/json:
               schema: 
                $ref: '#/components/schemas/User'
+    
+    post:
+      summary: adds a new record
+      tags: [User]
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: created
+        '400':
+          description: error
+
+
+  
 
   /users/{userId}:
     get:
@@ -30,7 +48,7 @@ paths:
         - name: userId
           in: path
           required: true
-          description: autogenerated user id by mongo
+          description: autogenerated user id 
           schema:
             type: string
       responses: 
@@ -38,6 +56,8 @@ paths:
           description: OK
         '400':
           description: Couldn't find it
+        '500':
+          description: Cast to ObjectId failed for value
     
     delete:
       summary: deletes a user
@@ -57,27 +77,11 @@ paths:
         '500':
           description: error
 
-  /users/:
-    post:
-      summary: adds a new record
-      tags: [User]
-      requestBody:
-        required: true
-        content: 
-          application/json:
-            schema:
-              $ref: '#/components/schema/User'
-      responses:
-        '200':
-          description: created
-        '400':
-          description: error
+  # /users/:
+    
 
 
-  
-
-
-  /class/getAllClasses:
+  /class/getAllClasses/:
     get:
       summary: Returns a list of classes.
       tags: [Class]
@@ -88,26 +92,69 @@ paths:
             application/json:
               schema: 
                 $ref: '#/components/schemas/Class'
+    
+    post:
+      summary: add a class
+      tags: [Class]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Class'
+      responses:
+        '200':
+          description: created
+        '400':
+          description: error
 
-  /class/get/{classId}:
+
+
+  /class/{classId}:
     get:
-      summary: perticular class
-      description: sometjong
+      summary: particular class
+      tags: [Class]
+      description: something
+      parameters:
+        - name: classId
+          in: path
+          required: true
+          description: autogenerated class id 
+          schema: 
+            type: string
       responses:
         '200':
           description: classinfo
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
+        '400':
+          description: Couldn't find it
+        '500':
+          description: Cast to classId failed for value
+
+    delete:
+        summary: deletes a class
+        tags: [Class]
+        parameters:
+          - name: classId
+            in: path
+            required: true
+            description: autogenrated classid
+            schema: 
+              type: string
+        responses:
+          '200':
+            description: Deleted the class
+          '400':
+            description: not available in databse
+          '500':
+            description: error
+      
 
 
   
   /classwork/getAllClassworks:
     get:
       summary: Returns a list of classworks assigned.
+      tags: [Classwork]
       description: Optional extended description in CommonMark or HTML.
       responses:
         '200':    # status code
@@ -128,24 +175,18 @@ components:
         - username
         - password
         - email
-        - profile_picture
         - token
-        - archived_class
 
       properties:
-        id:
+        username:
           type: string
         password:
           type: string
         email:
           type: string
-        profile_picture:
-          type: string
         token:
           type: string
-        archived_class:
-          type: array
-
+        
     Class:
       type: object
       required: 
